--- a/src/components/playList/music.css
+++ b/src/components/playList/music.css
@@ -212,3 +212,12 @@
 .d-none {
   display: none;
 }
+
+button {
+  background-color: transparent;
+  border: 0;
+}
+
+button:focus {
+  outline: 0;
+}
