--- a/src/components/playList/playList.css
+++ b/src/components/playList/playList.css
@@ -80,7 +80,7 @@
   color: gray;
 }
 
-.fa-heart{
+.liked{
   color: rgb(253,29,29);
   /* background: -webkit-linear-gradient(#eee, #333); */
   /* -webkit-background-clip: text;
